Fixed a bug in the subscription. Function tests for working from memory are covered. Changes have been made to the work plan and analysis. Generated files for Docker. Comments have been written on a number of functions.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,3 +11,16 @@ services:
     volumes:
       - ./postgresdb/sql/PostsComments.sql:/docker-entrypoint-initdb.d/PostsComments.sql
     image: postgres:16.2-alpine3.19
+
+  intertask:
+    container_name: intertask
+    ports:
+      - "8080:8080"
+    environment:
+      - POSTGRES_URL=postgres://admin:12345@postgres:5432/db_post_comment?sslmode=disable
+      - IN_MEMORY=false
+    build:
+      context: .
+
+networks:
+  default:
